--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
             font-family: Arial, sans-serif; 
             margin: 0; 
             padding: 20px; 
-            background: #f4f4f4; 
+            background: #1a1a1a; 
             font-size: 18px; 
             line-height: 1.6;
+            color: #e0e0e0;
         }
         h1 { 
-            color: #333; 
+            color: #ffffff; 
             font-size: 2.5em; 
             text-align: center; 
             margin-bottom: 30px; 
         }
         h2 { 
-            color: #333; 
+            color: #ffffff; 
             font-size: 1.5em; 
             margin-bottom: 15px; 
         }
         .section { 
-            background: white; 
+            background: #2d2d2d; 
             padding: 25px; 
             border-radius: 10px; 
             margin-bottom: 25px; 
-            box-shadow: 0 0 10px rgba(0,0,0,0.1); 
+            box-shadow: 0 0 15px rgba(0,0,0,0.3); 
+            border: 1px solid #444;
         }
         table { 
             width: 100%; 
@@ -38,23 +40,34 @@
             font-size: 16px; 
         }
         th, td { 
-            border: 1px solid #ccc; 
+            border: 1px solid #555; 
             padding: 12px; 
             text-align: center; 
         }
         th { 
-            background: #eee; 
+            background: #404040; 
             font-size: 17px; 
             font-weight: bold; 
+            color: #ffffff;
         }
         td { 
             font-size: 16px; 
+            background: #333333;
+            color: #e0e0e0;
+        }
+        tr:nth-child(even) td {
+            background: #3a3a3a;
+        }
+        tr:hover td {
+            background: #4a4a4a;
         }
         code { 
-            background: #eee; 
+            background: #404040; 
+            color: #ffcc00;
             padding: 4px 8px; 
             border-radius: 4px; 
             font-size: 16px; 
+            border: 1px solid #555;
         }
         ul, ol { 
             font-size: 18px; 
@@ -65,6 +78,7 @@
         }
         strong { 
             font-size: 18px; 
+            color: #ffffff;
         }
     </style>
 </head>
